fixed result button alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -796,7 +796,7 @@ h2 {
       background: none;
       color: white;
       text-transform: uppercase;
-      margin: 30px auto 40px auto;
+      margin: 30px 0 40px 0;
       padding: 10px 40px;
       border: 2px solid white;
       font-weight: 700; }
